bots learning to be close to me

--- a/src/style.css
+++ b/src/style.css
@@ -22,7 +22,13 @@ body {
   border: 6px #222222 solid;
 }
 
-#show-hide-button{
+#button-network{
+  position: relative;
+  bottom: -20px;
+  left: -500px;
+}
+
+#button-sensors{
   position: relative;
   bottom: -20px;
   left: -500px;
