--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
   background-color: #566040;
   margin: 0;
+
+  font-family: 'Roboto', sans-serif;
 }
 
 #app {
@@ -41,4 +43,8 @@ body {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+
+#training-selection {
+  color: whitesmoke;
 }
